# dragonion

./: .gitignore  README.md  dragonion.spec  pyproject.toml  tracer.py
.github/workflows/: build.yml
dragonion/: __init__.py
dragonion/modules/cli/: main.py
dragonion/modules/encryption/: identity.py
dragonion/modules/tui/: tui.py
dragonion/modules/tui/authentication/: authentication.py
dragonion/modules/tui/authentication/widgets/: containers.py
dragonion/modules/tui/chat/: chat.py
dragonion/modules/tui/chat/utils/handlers/input/: general.py  message.py
dragonion/modules/tui/chat/utils/handlers/input/command/: command.py
dragonion/modules/tui/chat/utils/handlers/input/command/commands/: connect.py  disconnect.py  join.py
dragonion/modules/tui/chat/utils/tasks/socket_handler/: task.py
dragonion/modules/tui/chat/widgets/: containers.py
dragonion/modules/tui/chat/widgets/inputs/: message_input.py
dragonion/modules/tui/chat/widgets/items/: message.py
dragonion/modules/tui/helpers/: storage.py
dragonion/modules/tui/identity/: identity.py
dragonion/modules/tui/identity/widgets/: containers.py  inputs.py
dragonion/utils/core/: dirs.py
dragonion/utils/onion/: __init__.py  auth.py  onion.py  tor_downloader.py
scripts/: l  lu  m  mu  w  wu
