[tool.poetry]
name = "dragonion"
version = "0.1.0"
description = ""
authors = ["BarsTiger <zxcbarstiger@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
textual = "^0.29.0"
attrs = "^23.1.0"
requests = "^2.31.0"
stem = "^1.8.2"
pynacl = "^1.5.0"
psutil = "^5.9.5"
sqlitedict = "^2.1.0"
click = "^8.1.3"
cryptography = "^41.0.1"
ezzthread = "^1.0.0"

[tool.poetry.dev-dependencies]
textual = {extras = ["dev"], version = "^0.29.0"}
pyinstaller = "^5.12.0"

[tool.poetry.scripts]
dragonion = "dragonion:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
