[tool.poetry]
name = "dragonion"
version = "1.0.3"
description = "Most modern-looking, encrypted and functional in-console onion chat that you control!"
authors = ["BarsTiger <zxcbarstiger@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
textual = "^0.32.0"
attrs = "^23.1.0"
requests = "^2.31.0"
stem = "^1.8.2"
pynacl = "^1.5.0"
psutil = "^5.9.5"
sqlitedict = "^2.1.0"
click = "^8.1.6"
cryptography = "^42.0.7"
ezzthread = "^1.0.0"
websockets = "^12.0"
pysocks = "^1.7.1"
dragonion-core = "^0.1.1"

[tool.poetry.scripts]
dragonion = "dragonion:main"

[tool.poetry.group.dev.dependencies]
textual = { extras = ["dev"], version = "^0.32.0" }
pyinstaller = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
